21.0.7
-------


21.0.6
-------
(RB=1312972)
Build validating schema on request if using projections, return HTTP 400 for projections with nonexistent fields

(RB=1325295)
use retryZookeeper in AclAwareZookeeperTest to improve test stability

(RB=1295192)
refactored zkConnectionDealer to SharedZkConnectionProvider

21.0.5
-------
(RB=1277357)
Add support for coercing Maps to DataMaps in QueryParamsUtil.convertToDataMap()

21.0.4
-------
(RB=1294454)
Adding session resumption and certificate checker for http2
(RB=1260841)
Add application Principals to cluster for server authentication

21.0.3
-------
(RB=1319738)
Make ClientRequestFilter implementation of wire attributes case-insensitive

21.0.2
-------
(RB=1309804)
Update test to use old property values
(RB=1315578)
Make R2 wire attribute key implementation case-insensitive

21.0.1
-------
(RB=1306976)
Update tests to use old property values

(RB=1299505)
Remove request query params from response location header for CREATE and BATCH_CREATE

(RB=1301460)
Bump up parseq version to non EOLed version.

(RB=1297701)
Define ZKAclProvider interface

21.0.0
-------

20.0.23
-------
(RB=1290394)
Update default values of the following properties:
	DEFAULT_RAMP_FACTOR = 2.0;
	DEFAULT_HIGH_WATER_MARK = 600;
	DEFAULT_LOW_WATER_MARK = 200;
	DEFAULT_DOWN_STEP = 0.05;
	DEFAULT_MIN_CALL_COUNT = 1;
	DEFAULT_HIGH_LATENCY = Time.milliseconds(400);
	DEFAULT_LOW_LATENCY  = Time.milliseconds(200);
	DEFAULT_REQUEST_TIMEOUT = 1000;

20.0.22
-------
(RB=1283017)
SyncIoHandler should notify its reader/writer when exception happends

20.0.21
-------
(RB=1288205)
Remove Flow API

(RB=1278581)
Emits R2 channel pool events

(RB=1289790)
SslHandshakeTimingHandler only produces a TransportCallback

20.0.20
-------
(RB=1286630)
Adding error codes to ServiceUnavailableException

20.0.19
-------
(RB=1260149)
add zookeeper connection sharing feature

20.0.18
-------
(RB=1281573)
Expose getFields() to FindRequest/GetAllRequest/CreateIdEntityRequest
